traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/Scenes/chapter1.rpy", line 3, in script
    return;
  File "game/Scenes/chapter1.rpy", line 3
    ;
    ^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/Scenes/chapter1.rpy", line 3, in script
    return;
  File "renpy/ast.py", line 1690, in execute
    renpy.store._return = renpy.python.py_eval(self.expression)
                          ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1290, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/Scenes/chapter1.rpy", line 3
    ;
    ^
SyntaxError: invalid syntax

Windows-11-10.0.26100-SP0 AMD64
Ren'Py 8.4.0.25071206
gongmanchu_remake 1.0
Thu Jul 24 00:00:49 2025
